--- a/hw1-application_form.html
+++ b/hw1-application_form.html
@@ -5,6 +5,11 @@
     <title></title>
   </head>
   <body>
+    <nav>
+            <a href="http://spada8299.github.io/wp01/hw1-course_page.html">課程簡介</a> | 
+            <a href="http://spada8299.github.io/wp01/hw1-application_form.html">申請加入課程</a>
+        </nav>
+        <h1>申請加入課程</h1>
   	<form>
   	<p><label for="name">1.your name:</label></p>
   	<p><input type="text" name="name" id="name" placeholder="Your name" pattern="[A-Za-z0-9]{6}"></p>
