--- a/hw1-course_page.html
+++ b/hw1-course_page.html
@@ -5,11 +5,17 @@
     <title></title>
   </head>
   <body>
-  	<h1>課程</h1>
-  	<table border="1">
+  	<header>
+  		<nav>
+  			<a href="http://spada8299.github.io/wp01/hw1-course_page.html">課程簡介</a> | 
+  			<a href="http://spada8299.github.io/wp01/hw1-application_form.html">申請加入課程</a>
+  		</nav>
+  		<h1>課程簡介</h1>
+  	</header>
+  	<table border="1" width="50%">
   	<tr>
-    	<th colspan="2">學年/學期 Academic Year/Semester</th>
-    	<td colspan="2">103 學年 第 2 學期</td>
+    	<th width="496" colspan="2">學年/學期 Academic Year/Semester<span></span></th>
+    	<td width="496" colspan="2">103 學年 第 2 學期</td>
   	</tr>
   	<tr>
     	<th rowspan="2" colspan="2">課程名稱 Course Name</th> 
@@ -90,6 +96,12 @@
   	<tr>
   		<td colspan="4">N/A</td>
   	</tr>
+	</table>
+
+	<table border="1" width="40%" style="Floating:right">
+		<tr>
+			<th>核心能力分析圖</th>
+		</tr>
 	</table>
 	
 	<aside>
