--- a/hw1-course_page.html
+++ b/hw1-course_page.html
@@ -12,7 +12,7 @@
   		</nav>
   		<h1>課程簡介</h1>
   	</header>
-  	<table border="1" width="50%">
+  	<table border="1" width="50%" align="left">
   	<tr>
     	<th width="496" colspan="2">學年/學期 Academic Year/Semester<span></span></th>
     	<td width="496" colspan="2">103 學年 第 2 學期</td>
@@ -98,10 +98,40 @@
   	</tr>
 	</table>
 
-	<table border="1" width="40%" style="Floating:right">
+	<table border="1" width="314" align="midle">
 		<tr>
-			<th>核心能力分析圖</th>
+			<th><img src="http://spada8299.github.io/wp01/hw1-01.jpg" alt="核心能力分析圖" (width="313" height="35")></th>
 		</tr>
+    <tr>
+      <td><img src="http://spada8299.github.io/wp01/hw1-02.jpg" alt="核心能力分析圖" (width="314" height="243")>
+<br><strong>學生自評核心能力填答率: 0% (0/40)</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <span><strong>能力項目說明：</strong></span>
+        <table border="0" align="center">
+          <tr>
+            <td>A.具備發現與解決問題之能力</td>
+            <td>B.具備敘事與美學能力</td>
+          </tr>
+          <tr>
+            <td>C.具備科技研發與系統開發能力</td>
+            <td>D.具備團隊合作力</td>
+          </tr>
+          <tr>
+            <td>E.具備人文關懷與社會參與情操</td>
+            <td>F.具備企劃整合與溝通能力</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    <tr>
+      <th><img src="http://spada8299.github.io/wp01/hw1-03.jpg" alt="授課方式比例圖" (width="314" height="35")></th>
+    </tr>
+    <tr>
+      <td><img src="http://spada8299.github.io/wp01/hw1-04.jpg" alt="授課方式比例圖" (width="314" height="264")></td>
+    </tr>
 	</table>
 	
 	<aside>
