--- a/hw1-course_page.html
+++ b/hw1-course_page.html
@@ -71,9 +71,9 @@
     </tr>
     </table>
 
-	<table border="0" width="314" align="right">
+	<table border="0" width="500" align="right">
 		<tr>
-			<th><img src="http://spada8299.github.io/wp01/hw1-01.jpg" alt="核心能力分析圖" (width="313" height="35")></th>
+			<td><img src="http://spada8299.github.io/wp01/hw1-01.jpg" alt="核心能力分析圖" (width="313" height="35")></td>
 		</tr>
     <tr>
       <td><img src="http://spada8299.github.io/wp01/hw1-02.jpg" alt="核心能力分析圖" (width="314" height="243")>
@@ -82,25 +82,21 @@
     </tr>
     <tr>
       <td>
-        <span><strong>能力項目說明：</strong></span>
-        <table border="0" align="center">
+        <strong>能力項目說明：</strong><br>
+        <table border="0" align="left">
           <tr>
-            <td>A.具備發現與解決問題之能力</td>
-            <td>B.具備敘事與美學能力</td>
-          </tr>
-          <tr>
-            <td>C.具備科技研發與系統開發能力</td>
-            <td>D.具備團隊合作力</td>
-          </tr>
-          <tr>
-            <td>E.具備人文關懷與社會參與情操</td>
-            <td>F.具備企劃整合與溝通能力</td>
+            <td>A.具備發現與解決問題之能力<br>
+            B.具備敘事與美學能力<br>
+            C.具備科技研發與系統開發能力<br>
+            D.具備團隊合作力<br>
+            E.具備人文關懷與社會參與情操<br>
+            F.具備企劃整合與溝通能力</td>
           </tr>
         </table>
       </td>
     </tr>
     <tr>
-      <th><img src="http://spada8299.github.io/wp01/hw1-03.jpg" alt="授課方式比例圖" (width="314" height="35")></th>
+      <td><img src="http://spada8299.github.io/wp01/hw1-03.jpg" alt="授課方式比例圖" (width="314" height="35")></td>
     </tr>
     <tr>
       <td><img src="http://spada8299.github.io/wp01/hw1-04.jpg" alt="授課方式比例圖" (width="314" height="264")></td>
