--- a/hw1-course_page.html
+++ b/hw1-course_page.html
@@ -19,10 +19,10 @@
     	<p>103 學年 第 2 學期</p>
   	<br>
     	<h2>課程名稱 Course Name</h2> 
-    	<ul>
-        <li>(中 Ch.)Ｗeb程式設計</li>
-        <li>(英 Eng.)Web Programming</li>
-      </ul>
+    	<p>
+        (中 Ch.)Ｗeb程式設計
+        <br>(英 Eng.)Web Programming
+      </p>
       <br>
   	  <h2>授課教師 Instructor</h2>
     	<p>余能豪</p>
