--- a/hw2-course_page.html
+++ b/hw2-course_page.html
@@ -7,10 +7,12 @@
   </head>
   <body>
   	<header>
-  		<nav>
-  			<a href="http://spada8299.github.io/wp01/hw2-course_page.html">課程簡介</a> | 
-  			<a href="http://spada8299.github.io/wp01/hw2-application_form.html">申請加入課程</a>
+      
+  		<nav class="nav1">
+  			<a href="http://spada8299.github.io/wp01/hw2-course_page.html"><span >課程簡介</span></a> | 
+  			<a href="http://spada8299.github.io/wp01/hw2-application_form.html"><span>申請加入課程</span></a>
   		</nav>
+      
   		<h1>課程簡介</h1>
   	</header>
     <table border="0" width="600" align="left">
