--- a/hw2-course_page.html
+++ b/hw2-course_page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="http://spada8299.github.io/wp01/hw2-css.css">
+    <link rel="stylesheet" type="text/css" href="hw2-css.css">
   </head>
   <body>
   	<header>
