--- a/hw2-application_form.html
+++ b/hw2-application_form.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" type="text/css" href="hw2-css.css">
   </head>
-  <body bgcolor="aliceblue">
-    <nav>
-            <a href="http://spada8299.github.io/wp01/hw2-course_page.html">課程簡介</a> | 
-            <a href="http://spada8299.github.io/wp01/hw2-application_form.html">申請加入課程</a>
+  <body>
+    <header>
+    <nav class="nav1">
+            <a href="http://spada8299.github.io/wp01/hw2-course_page.html"><span>課程簡介</span></a> | 
+            <a href="http://spada8299.github.io/wp01/hw2-application_form.html"><span>申請加入課程</span></a>
         </nav>
-        
+    </header>
   	<center>
         <h1>申請加入課程</h1>
     <form>
@@ -31,7 +33,7 @@
     <p><label style="font-size:34px">4.which form of transport do you use?</label></p>
     <p>
     	<label style="font-size:20px"><input type="checkbox" name="tra" value="t0">walking</label><br>
-    	<label style="font-size:20px"><input type="checkbox" name="tra" value="t1">bike</label><br>
+    	<label style="font-size:20px"><input type="checkbox" name="tra" value="t1"><i class="fa fa-bicycle"></i>bike</label><br>
     	<label style="font-size:20px"><input type="checkbox" name="tra" value="t2">motorcycle</label><br>
     	<label style="font-size:20px"><input type="checkbox" name="tra" value="t3">car</label><br>
     	<label style="font-size:20px"><input type="checkbox" name="tra" value="t4">bus</label><br>
