--- a/hw2-course_page.html
+++ b/hw2-course_page.html
@@ -15,7 +15,7 @@
       
   		<h1>課程簡介</h1>
   	</header>
-    <table border="0" width="600" align="left">
+    <div class="infor">
       <tr>
         <td>
       <h2>學年/學期 Academic Year/Semester</h2>
@@ -63,7 +63,7 @@
     </ol><br>
   		<h2>課程要求/評分標準 <br>Course requirements/Grading standards</h2>
   		<p>課堂作業(35%) 、期中作業(20%)及期末實作成品成果展示(30%)</p><br>
-  		<h2>參考書目 Textbook &amp; references<br>（為維護智慧財產權，請務必使用正版書籍）</h2>
+  		<h2>參考書目 Textbook &amp; references<br><strong>（為維護智慧財產權，請務必使用正版書籍）</strong></h2>
   		<ul>
         <li>. Eric Freeman, Elisabeth Robson(2011), Head First HTML5 Programming: Building Web Apps with JavaScript, O'Reilly</li>
         <li>. Crockford Douglas, JavaScript: The Good Parts, O'Reilly</li>
@@ -72,20 +72,20 @@
   		<p>N/A</p><br>
     </td>
     </tr>
-    </table>
+    </div>
 
-	<table border="0" width="500" align="right">
+	<table class="chart">
 		<tr>
 			<td><img src="http://spada8299.github.io/wp01/hw1-01.jpg" alt="核心能力分析圖" (width="313" height="35")></td>
 		</tr>
     <tr>
       <td><img src="http://spada8299.github.io/wp01/hw1-02.jpg" alt="核心能力分析圖" (width="314" height="243")>
-<br><strong>學生自評核心能力填答率: 0% (0/40)</strong>
+<br><b>學生自評核心能力填答率: 0% (0/40)</b>
       </td>
     </tr>
     <tr>
       <td>
-        <strong>能力項目說明：</strong><br>
+        <b>能力項目說明：</b><br>
         <table border="0" align="left">
           <tr>
             <td>A.具備發現與解決問題之能力<br>
