--- a/hw2-application_form.html
+++ b/hw2-application_form.html
@@ -33,7 +33,7 @@
     <p><label style="font-size:34px">4.which form of transport do you use?</label></p>
     <p>
     	<label style="font-size:20px"><input type="checkbox" name="tra" value="t0">walking</label><br>
-    	<label style="font-size:20px"><input type="checkbox" name="tra" value="t1">&#xf17b;bike</label><br>
+    	<label style="font-size:20px"><input type="checkbox" name="tra" value="t1">bike</label><br>
     	<label style="font-size:20px"><input type="checkbox" name="tra" value="t2">motorcycle</label><br>
     	<label style="font-size:20px"><input type="checkbox" name="tra" value="t3">car</label><br>
     	<label style="font-size:20px"><input type="checkbox" name="tra" value="t4">bus</label><br>
