--- a/hw2-course_page.html
+++ b/hw2-course_page.html
@@ -9,11 +9,11 @@
   	<header>
       
   		<nav class="nav1">
-  			<a href="http://spada8299.github.io/wp01/hw2-course_page.html"><span >課程簡介</span></a> | 
+  			<a href="http://spada8299.github.io/wp01/hw2-course_page.html"><span>課程簡介</span></a> | 
   			<a href="http://spada8299.github.io/wp01/hw2-application_form.html"><span>申請加入課程</span></a>
   		</nav>
       
-  		<h1>課程簡介</h1>
+  		<h1><i class="fa fa-book"></i>課程簡介<i class="fa fa-book"></i></h1>
   	</header>
     <div class="infor">
       <tr>
@@ -41,7 +41,7 @@
   		<h2>課程大綱 Course Description</h2>
   		<p>本課程涵蓋網路平台之最新技術如HTML5, CSS3, Javascript, JSON, JQuery等，並介紹國內外網站及網路行銷活動範例，培養學生網頁應用程式之開發能力及資訊架構設計能力，最後能設計兼具功能與美感的動態網站。</p><br>
   		<h2>上課進度 Class Schedule</h2>
-  	<ol>
+  	<ol class="schedule_list">
       <li>Course Introduction / Git</li>
       <li>HTML5</li>
       <li>CSS3 (I)</li>
@@ -76,30 +76,31 @@
 
 	<table class="chart">
 		<tr>
-			<td><img src="http://spada8299.github.io/wp01/hw1-01.jpg" alt="核心能力分析圖" (width="313" height="35")></td>
+			<th>核心能力分析圖 <br>Core competence analysis chart</th>
 		</tr>
     <tr>
       <td><img src="http://spada8299.github.io/wp01/hw1-02.jpg" alt="核心能力分析圖" (width="314" height="243")>
-<br><b>學生自評核心能力填答率: 0% (0/40)</b>
-      </td>
+      <br><b><span class="student_core_competence">學生自評核心能力填答率: 0% (0/40)</span></b></td>
     </tr>
     <tr>
       <td>
-        <b>能力項目說明：</b><br>
-        <table border="0" align="left">
+        <table border="0" align="center" width="300px">
           <tr>
-            <td>A.具備發現與解決問題之能力<br>
-            B.具備敘事與美學能力<br>
-            C.具備科技研發與系統開發能力<br>
-            D.具備團隊合作力<br>
-            E.具備人文關懷與社會參與情操<br>
-            F.具備企劃整合與溝通能力</td>
+            <td class="introducing">
+            <h2>能力項目說明：</h2>
+            <ol class="competence_list">
+            <li>具備發現與解決問題之能力</li>
+            <li>具備敘事與美學能力</li>
+            <li>具備科技研發與系統開發能力</li>
+            <li>具備團隊合作力</li>
+            <li>具備人文關懷與社會參與情操</li>
+            <li>具備企劃整合與溝通能力</li></ol></td>
           </tr>
         </table>
       </td>
     </tr>
     <tr>
-      <td><img src="http://spada8299.github.io/wp01/hw1-03.jpg" alt="授課方式比例圖" (width="314" height="35")></td>
+      <th>授課方式比例圖 <br>Teaching approach pie chart</th>
     </tr>
     <tr>
       <td><img src="http://spada8299.github.io/wp01/hw1-04.jpg" alt="授課方式比例圖" (width="314" height="264")></td>
