--- a/hw2-application_form.html
+++ b/hw2-application_form.html
@@ -11,9 +11,9 @@
             <a href="http://spada8299.github.io/wp01/hw2-course_page.html"><span>課程簡介</span></a> | 
             <a href="http://spada8299.github.io/wp01/hw2-application_form.html"><span>申請加入課程</span></a>
         </nav>
+        <h1><i class="fa fa-check"></i>申請加入課程</h1>
     </header>
-  	<center>
-        <h1>申請加入課程</h1>
+  	<div class="form1">
     <form>
         <table border="0">
             <tr>
@@ -23,8 +23,8 @@
     
     <p style="font-size:34px">2.what is your gender?</p>
     <p>
-    	<label style="font-size:20px"><input type="radio" name="gender" value="g0">male</label><br>
-    	<label style="font-size:20px"><input type="radio" name="gender" value="g1">female</label>
+    	<label style="font-size:20px"><input type="radio" name="gender" value="g0">male<i class="fa fa-mars"></i></label><br>
+    	<label style="font-size:20px"><input type="radio" name="gender" value="g1">female<i class="fa fa-venus"></i></label>
     </p>
     
     <p><label for="birthday" style="font-size:34px">3.birthday</label></p>
@@ -82,6 +82,6 @@
 </tr>
 </table>
 </form>
-</center>
+</div>
   </body>
 </html>
